Layout problem fixed

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 
 .header-container{
     width: 100%;
-    height: 100vh;
+    height: 696px;
         /* background-color: aqua; */
 }
 
@@ -147,6 +147,7 @@ h1{
 
 @media (max-width:992px){
     .header-content-image{
+        width: 100%;
         height: 50%;
     img{
         width: 324px;
@@ -154,14 +155,50 @@ h1{
     }
     }
     .header-content-text{
+        width: 400px;
         height: 50%;
     }
-    .header-content-container{
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+}
+
+@media (min-width:992px){
+    .header-content-text-h1{
+        width: 480px;
+        height: 88px;
+        font-size: 32px;
     }
+}
+
+@media(max-width:992px){
+    .header-content-text-h1{
+        width: 345px;
+        height: 153px;
+        font-size: 30px;
+    }
+}
+
+@media (min-width:768px){
+    .header-contries-container{
+        width: 100%;
+        height: 80px;
+        background-color: blueviolet;
+        display: flex;
+    }
+    
+    .header-contries {
+        width: 100%;
+        height: 100%;
+        background-color: aqua;
+    }
+}
+
+@media(max-width: 768px){
+    .header-contries-container{
+        display: none;
+    }
+    .header-contries{
+        display: none;
+    }
+
 }
 
 
